all pages complete

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body{
   background-color: white !important;
 }
 .side-nav-bg{
-  background-image: url(./public/images/bg-sidebar-mobile.svg);
+  background-image: url(/images/bg-sidebar-mobile.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
