--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 35dvh;
+  /* height: 35dvh; */
 }
 .go-back{
   @apply bg-red
